examples/errors/complex_nested.orr
diagram component;

// Complex type definitions with various attributes
type WebServer = Rectangle [fill_color="lightblue", border="2"];
type Database = Oval [fill_color="lightgreen"];
type LoadBalancer = Rectangle [fill_color="yellow"];
type Cache = Oval [fill_color="orange"];
type ApiGateway = Rectangle [fill_color="purple"];

// Multiple component definitions in a complex architecture
frontend_lb: LoadBalancer [label="Frontend Load Balancer"];
web1: WebServer [label="Web Server 1", port="8080"];
web2: WebServer [label="Web Server 2", port="8081"];
web3: WebServer [label="Web Server 3", port="8082"];

// API layer components
api_gateway: ApiGateway [label="API Gateway", version="v2.1"];
auth_service: WebServer [label="Auth Service"];
user_service: WebServer [label="User Service"];
order_service: WebServer [label="Order Service"];

// Data layer components
redis_cache: Cache [label="Redis Cache", ttl="3600"];
user_db: Database [label="User Database"];
order_db: Database [label="Order Database"];
session_store: Database [label="Session Store"];

// Complex relation chains - this line has an intentional syntax error
frontend_lb -> web1;
frontend_lb -> web2;
frontend_lb -> web3;
web1 -> api_gateway;
web2 -> api_gateway;
web3 -> api_gateway

// This missing semicolon above should trigger a precise error at the end of the previous line
api_gateway -> auth_service;
api_gateway -> user_service;
api_gateway -> order_service;

// Cache and database relations
auth_service -> redis_cache;
user_service -> user_db;
user_service -> redis_cache;
order_service -> order_db;
order_service -> redis_cache;

// Cross-service dependencies
auth_service -> session_store;
user_service -> auth_service;
order_service -> user_service;

// Analytics and monitoring relations
redis_cache -> user_db;
session_store -> user_db;
